--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,19 @@ fabric.properties
 *.webp
 *.jar
 .webp
+
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
