reconectar automaticamente, gatilhos de remoção e inserção de rfid, retirar e devolver, problemas com consulta ao banco de dados para alem do nome

--- a/Ali/app/src/main/AndroidManifest.xml
+++ b/Ali/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
             android:exported="true">
         </activity>
 
+        <service android:name=".WebSocketService" />
+
     </application>
 
 </manifest>
